--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "di": "git+https://github.com/RackHD/di.js.git",
     "resolve": "^1.0.0",
     "glob": "^4.3.2",
-    "express": "3.x",
+    "express": "^4.10.7",
     "body-parser": "^1.10.1",
     "cors": "^2.5.2",
     "express-urlrewrite": "~1.2.0",
