--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nconf": "^0.7.1",
     "assert-plus": "^1.0.0",
     "bluebird": "^3.4.6",
-    "lodash": "^3.10.1"
+    "lodash": "^3.10.1",
+    "node-uuid": "^1.4.2"
   }
 }
