--- a/config.json
+++ b/config.json
@@ -13,5 +13,7 @@
   ],
   "httpFileServiceRootDir": "./static/files",
   "httpFileServiceApiRoot": "/",
-  "tempDir": "/tmp/on-static/"
+  "tempDir": "/tmp/on-static/",
+  "inventoryFile": "./inventory.json",
+  "images": []
 }
