--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "assert-plus": "^1.0.0",
     "bluebird": "^3.4.6",
     "lodash": "^3.10.1",
-    "node-uuid": "^1.4.2"
+    "node-uuid": "^1.4.2",
+    "validator": "^5.2.0"
   }
 }
