--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bluebird": "^3.4.6",
     "lodash": "^3.10.1",
     "node-uuid": "^1.4.2",
-    "validator": "^5.2.0"
+    "validator": "^5.2.0",
+    "mkdirp": "^0.5.1"
   }
 }
