--- a/config.json
+++ b/config.json
@@ -16,27 +16,5 @@
   "tempDir": "/tmp/on-static/",
   "isoDir": "./static/files/iso",
   "inventoryFile": "./config.json",
-  "images": [
-    {
-      "id": "ef568f3c-5140-4f2d-8f96-8af93f47b164",
-      "iso": "http://10.62.59.209/static/images/ubuntu-16.04-server-amd64.iso",
-      "name": "ubuntu",
-      "version": "16.04",
-      "status": "OK"
-    },
-    {
-      "id": "1e7581aa-9bd3-4e40-b390-ba73ba9217cb",
-      "iso": "http://10.62.59.209/static/images/ubuntu-14.04.2-server-amd64.iso",
-      "name": "ubuntu",
-      "version": "14.04",
-      "status": "OK"
-    },
-    {
-      "id": "4fa6cf42-4161-4782-9f5b-c7515f7ddef2",
-      "iso": "rhel-7.0.iso",
-      "name": "rhel",
-      "version": "7.0",
-      "status": "OK"
-    }
-  ]
+  "images": []
 }
