--- a/package.json
+++ b/package.json
@@ -1,21 +1,35 @@
 {
-  "name": "ServeStaticContent",
+  "name": "on-static",
   "version": "0.0.1",
+  "description": "Static file server for RackHD users",
+  "main": "index.js",
+  "scripts": {
+    "test": "./node_modules/.bin/mocha $(find spec -name '*-spec.js') -R spec --require spec/helper.js",
+    "debug": "./node_modules/.bin/mocha debug $(find spec -name '*-spec.js') -R spec --require spec/helper.js"
+  },
   "dependencies": {
-    "di": "git+https://github.com/RackHD/di.js.git",
-    "resolve": "^1.0.0",
-    "glob": "^4.3.2",
-    "express": "^4.10.7",
-    "body-parser": "^1.10.1",
-    "cors": "^2.5.2",
-    "express-urlrewrite": "~1.2.0",
-    "serve-index": "^1.7.2",
-    "nconf": "^0.7.1",
     "assert-plus": "^1.0.0",
     "bluebird": "^3.4.6",
+    "body-parser": "^1.10.1",
+    "cors": "^2.5.2",
+    "di": "git+https://github.com/RackHD/di.js.git",
+    "express": "^4.10.7",
+    "express-urlrewrite": "~1.2.0",
+    "glob": "^4.3.2",
     "lodash": "^3.10.1",
+    "mkdirp": "^0.5.1",
+    "nconf": "^0.7.1",
     "node-uuid": "^1.4.2",
+    "serve-index": "^1.7.2",
     "validator": "^5.2.0",
-    "mkdirp": "^0.5.1"
+    "resolve": "^1.0.0"
+  },
+  "devDependencies": {
+    "chai": "^2.0.0",
+    "chai-as-promised": "^4.2.0",
+    "sinon-as-promised": "^2.0.3",
+    "sinon-chai": "^2.7.0",
+    "supertest": "^1.2.0",
+    "mocha": "^2.1.0"
   }
 }
