--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "node-uuid": "^1.4.2",
     "serve-index": "^1.7.2",
     "validator": "^5.2.0",
-    "resolve": "^1.0.0"
+    "resolve": "^1.0.0",
+    "lowdb": "^0.14.0"
   },
   "devDependencies": {
     "chai": "^2.0.0",
