--- a/.jshintrc
+++ b/.jshintrc
@@ -66,7 +66,7 @@
         "dihelper",
         "expect",
         "helper",
-        "onHttpContext",
+        "onStaticContext",
         "Promise",
         "request",
         "should",
